--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
     "workbox-webpack-plugin": "^7.0.0"
+  },
+  "dependencies": {
+    "fs": "^0.0.1-security",
+    "nodemon": "^3.1.0",
+    "ws": "^8.16.0"
   }
 }
